# network-synthesis

./: .gitignore  Makefile  README.md  division.py  operaciones_de_red.py  pyproject.toml  requirements.txt  sintesis_redes.py  test_sintesis_redes.py
src/: operaciones_de_red.py  red_electrica.py  red_paralela.py  red_serie.py  sintesis_redes.py
test/: test_sintesis_redes.py
tests/: test_red_compuesta.py  test_red_electrica.py  test_red_paralela.py  test_red_serie.py  utils.py
