[project]
name = "sintesis-de-redes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.56.0",
    "iniconfig==2.0.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "mpmath==1.3.0",
    "mypy>=1.16.1",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "pyparsing==3.2.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "ruff>=0.11.13",
    "six==1.17.0",
    "sympy==1.13.3",
]
